--- a/client/src/locales/ar/navbar.json
+++ b/client/src/locales/ar/navbar.json
@@ -10,5 +10,7 @@
   "chat": "الدردشة",
   "settings": "الإعدادات",
   "support": "الدعم" ,
-  "logout": "تسجيل الخروج"
+  "logout": "تسجيل الخروج",
+  "nav_mobile_title": "أهلاً بك في بسما",
+  "nav_mobile_text": "أول موقع ويب للعمال المستقلين"
 }
